--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -37,7 +37,14 @@
                 android:text="@string/falsebtn"
                 android:id="@+id/falsebtn"
                 android:layout_gravity="center" />
+
+
         </LinearLayout>
+        <Button
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/next_btn" />
     </LinearLayout>
 
 </RelativeLayout>
