--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -41,10 +41,9 @@
 
         </LinearLayout>
         <Button
-            android:id="@+id/next_button"
+            android:text="@string/next_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_btn" />
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
-
 </RelativeLayout>
