--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -44,6 +44,9 @@
             android:text="@string/next_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableRight="@drawable/arrow_right"
+            android:drawablePadding="4dp"
             android:layout_gravity="center_horizontal" />
+
     </LinearLayout>
 </RelativeLayout>
