--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -37,10 +37,9 @@
                 android:text="@string/falsebtn"
                 android:id="@+id/falsebtn"
                 android:layout_gravity="center" />
-
-
         </LinearLayout>
         <Button
+            android:id="@+id/next_button"
             android:text="@string/next_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,4 +48,5 @@
             android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
+
 </RelativeLayout>
