--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -46,24 +46,27 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
 
-            <Button
+            <ImageButton
                 android:id="@+id/prev_button"
-                android:text="@string/prev_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/arrow_left"
-                android:drawablePadding="4dp"
-                android:layout_gravity="center_horizontal" />
+                android:src="@drawable/arrow_left"
 
-            <Button
+                />
+
+            <ImageButton
                 android:id="@+id/next_button"
-                android:text="@string/next_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/arrow_right"
-                android:drawablePadding="4dp" />
+                android:src="@drawable/arrow_right"
+
+                />
+
+
 
         </LinearLayout>
 
     </LinearLayout>
+
+
 </RelativeLayout>
