--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -3,8 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".QuizActivity">
-
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".QuizActivity"
+    android:background="@drawable/droid">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
@@ -17,6 +17,8 @@
             android:layout_height="wrap_content"
             android:text="@string/q1"
             android:id="@+id/qtextView"
+            android:textColor="#fff"
+            android:textColorHighlight="#fff"
             android:layout_gravity="center" />
 
         <LinearLayout
