--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -18,12 +18,20 @@
 
         <TextView
             android:id="@+id/qtextView"
+            style="@style/AudioFileInfoOverlayText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/q1"
-            android:textColor="#fff"
-            android:textColorHighlight="#fff" />
+            android:textColor="#ff000dff"
+            android:textColorHighlight="#fff"
+
+            android:singleLine="false"
+            android:autoText="true"
+            android:elegantTextHeight="true"
+            android:textIsSelectable="false"
+            android:textStyle="bold"
+            android:textSize="25dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
